// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton should render with maximum props 1`] = `
<button
  aria-disabled={false}
  className="container uui-button-box uui-enabled -clickable uui-icon_button uui-color-blue root"
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
</button>
`;

exports[`IconButton should render with minimum props 1`] = `
<button
  className="container uui-button-box uui-enabled uui-icon_button uui-color-gray60 root"
  onClick={[Function]}
  tabIndex={-1}
  type="button"
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  />
</button>
`;
